--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,10 +1,18 @@
 img{
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    object-fit: cover;
     width: 100%;
-    height: 45%;
+    height: 100%;
+    overflow: hidden; /* Optional: hides overflow */
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light theme box shadow */
 
+}
+.image{
+    height: 100%;
+    width: 100%;
+    flex: 1;
+   
 }
 .card{
     border-radius: 5px;
@@ -14,10 +22,12 @@ img{
     width: 250px;
     text-decoration: none;
     display: block;
-    color: inherit; /* Inherit color from parent */
-
+   
+    display: flex;
+    flex-direction: column;
 }
 .text{
     padding: 0px 15px;
     height: 55%;
+    flex: 1;
 }
