--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ body {
   --very-light-gray-light-mode-background: hsl(0, 0%, 98%);
   --white-dark-mode-text-light-mode-elements: hsl(0, 0%, 100%);
 }
+.dark-mode {
+  background-color: var(--very-dark-blue-dark-mode-background) !important;
+  color: var(--white-dark-mode-text-light-mode-elements) ;
+}
 
 /* Example usage */
 /* body {
@@ -22,10 +26,7 @@ body {
   color: var(--very-dark-blue-light-mode-text);
 }
 
-.dark-mode {
-  background-color: var(--very-dark-blue-dark-mode-background);
-  color: var(--white-dark-mode-text-light-mode-elements);
-}
+
 
 input {
   background-color: var(--dark-gray-light-mode-input);
