--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -1,33 +1,43 @@
-img{
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    overflow: hidden; /* Optional: hides overflow */
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Light theme box shadow */
-
-}
-.image{
-    height: 100%;
-    width: 100%;
-    flex: 1;
-   
-}
-.card{
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    margin-top: 70px;
+.card {
     width: 250px;
-    text-decoration: none;
-    display: block;
-   
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    margin-top: 70px;
     display: flex;
     flex-direction: column;
+    text-decoration: none;
+    overflow: hidden;
+    transition: transform 0.2s ease;
 }
-.text{
-    padding: 0px 15px;
-    height: 55%;
+
+.card:hover {
+    transform: translateY(-5px);
+}
+
+.card img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.text {
     flex: 1;
+    padding: 15px;
+    height: 55%;
+    color: #333;
+}
+
+
+/* Media Query */
+
+@media (max-width: 768px) {
+    .card {
+        width: 100%;
+        /* يخلي الكارد ياخذ عرض كامل */
+        margin-top: 30px;
+    }
 }
